<resources>
    <string name="app_name">Digital Converter 32bit</string>

    <string name="unsinged_integer_converter">Unsigned Integer</string>
    <string name="signed_integer_converter">Signed Integer</string>
    <string name="fraction_converter">Fraction</string>
    <string name="exp_converter">Exponent IEEE</string>
    <string name="single_pre">Single Precision</string>

    <string name="dec">DEC</string>
    <string name="bin">BIN</string>
    <string name="hex">HEX</string>
    <string name="oct">OCT</string>
    <string name="s2">2\'s</string>
    <string name="sm">S.M.</string>
    <string name="smExtended">Sign Magnitude</string>

    <string name="sign">Sign (0 or 1)</string>
    <string name="exp">Exp (8 bits)</string>
    <string name="significand">Fraction (23 bits) (No Rounding)</string>

    <string name="clear">Clear All Fields</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
