<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_grey"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Singed Integer Converter"
        android:textColor="@color/dark_blue"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:id="@+id/main_sign_txt"
        />

    <RelativeLayout
        android:id="@+id/rv_sign_dec"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/main_sign_txt"
        >

        <EditText
            android:id="@+id/et_sign_dec"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/main_textview"
            android:textSize="20dp"
            android:textStyle="bold"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/dark_blue"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:maxLength="11"
            android:maxLines="1"
            android:imeOptions="actionDone"
            />

        <TextView
            android:id="@+id/txt_sign_dec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dec"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rv_sign_s2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/rv_sign_dec"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/et_sign_s2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/main_textview"
            android:textSize="12dp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:textColor="@color/dark_blue"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:maxLength="32"
            android:maxLines="1"
            android:paddingLeft="50dp"
            android:paddingRight="20dp"
            android:imeOptions="actionDone"
            />

        <TextView
            android:id="@+id/txt_sign_s2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s2"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rv_sign_hex"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/rv_sign_s2"
        android:layout_marginTop="40dp"
        >

        <EditText
            android:id="@+id/et_sign_hex"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/main_textview"
            android:textSize="20dp"
            android:textStyle="bold"
            android:inputType="text"
            android:textColor="@color/dark_blue"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:maxLength="8"
            android:maxLines="1"
            android:imeOptions="actionDone"
            />

        <TextView
            android:id="@+id/txt_sign_hex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hex"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rv_sign_sm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/rv_sign_hex"
        android:layout_marginTop="40dp"
        >

        <EditText
            android:id="@+id/et_sign_sm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/main_textview"
            android:textSize="12dp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:textColor="@color/dark_blue"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:maxLength="33"
            android:imeOptions="actionDone"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/txt_sign_sm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sm"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_sign_sm"
        android:text="@string/smExtended"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        android:layout_marginLeft="5dp"
        />

    <TextView
        android:id="@+id/sign_clear"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/main_textview"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rv_sign_sm"
        android:layout_marginTop="40dp"
        android:text="@string/clear"
        android:gravity="center"
        android:textSize="15dp"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        />


</RelativeLayout>
</ScrollView>