<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/main_exp_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Exponent IEEE Single Precision"
            android:textColor="@color/dark_blue"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rv_exp_dec"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/main_exp_txt"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/et_exp_dec"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/main_textview"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal|numberSigned"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_exp_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/dec"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/sub_txt_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_exp_dec"
            android:layout_marginTop="40dp"
            android:text="@string/sign"
            android:textColor="@color/dark_blue"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <RelativeLayout
            android:id="@+id/rv_exp_sign"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_below="@id/rv_exp_dec"
            android:layout_marginTop="70dp">

            <EditText
                android:id="@+id/et_exp_sign"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/main_textview"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="1"
                android:maxLines="1"
                android:paddingRight="5dp"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_exp_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="+/-"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/sub_txt_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_exp_dec"
            android:layout_marginTop="40dp"
            android:text="@string/exp"
            android:textColor="@color/dark_blue"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/sub_txt_sign"
            android:layout_marginLeft="15dp"
            />

        <RelativeLayout
            android:id="@+id/rv_exp_exp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rv_exp_dec"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="70dp"
            android:layout_toRightOf="@id/rv_exp_sign">

            <EditText
                android:id="@+id/et_exp_exp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/main_textview"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold"
                android:paddingLeft="30dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:id="@+id/txt_exp_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/bin"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/sub_txt_significand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/significand"
            android:textColor="@color/dark_blue"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_below="@id/rv_exp_sign"
            android:layout_marginTop="12dp"
            />

        <RelativeLayout
            android:id="@+id/rv_exp_bin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rv_exp_sign"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/et_exp_bin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/main_textview"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="23"
                android:maxLines="1"
                android:paddingLeft="50dp"
                android:paddingRight="20dp"
                android:textColor="@color/dark_blue"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_exp_bin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/bin"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/exp_clear"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@id/rv_exp_bin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/main_textview"
            android:gravity="center"
            android:text="@string/clear"
            android:textColor="@color/dark_blue"
            android:textSize="15dp"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>