<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/main_un_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Unsinged Integer Converter"
            android:textColor="@color/dark_blue"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rv_un_dec"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/main_un_txt"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/et_un_dec"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/main_textview"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold"
                android:paddingRight="10dp"
                />

            <TextView
                android:id="@+id/txt_un_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/dec"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rv_un_bin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rv_un_dec"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/et_un_bin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/main_textview"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="32"
                android:maxLines="1"
                android:paddingLeft="50dp"
                android:paddingRight="10dp"
                android:textColor="@color/dark_blue"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_un_bin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/bin"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rv_un_hex"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rv_un_bin"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/et_un_hex"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/main_textview"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold"
                android:paddingRight="10dp"/>

            <TextView
                android:id="@+id/txt_un_hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/hex"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rv_un_oct"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rv_un_hex"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/et_un_oct"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/main_textview"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="11"
                android:maxLines="1"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold"
                android:paddingRight="10dp"
                />

            <TextView
                android:id="@+id/txt_un_oct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/oct"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/un_clear"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@id/rv_un_oct"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/main_textview"
            android:gravity="center"
            android:text="@string/clear"
            android:textColor="@color/dark_blue"
            android:textSize="15dp"
            android:textStyle="bold" />


    </RelativeLayout>

</ScrollView>